--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   <!-- INTRO -->
 
   <div id="intro" class="intro-screen">
-    <div class="glow-title">Octopus</div>
+    <div class="img-intro"><img src="imgs/intro.gif" alt=""></div>
     <p id="introText" class="typing-text">Inicializando sistema...</p>
   </div>
   
@@ -45,7 +45,7 @@
             <!-- MESNAGEM BOT -->
             <div class="message bot-message">
 
-                <img class="bot-avatar" src="imgs/logo.Chatbot.LUMA.png" alt="">
+                <img class="bot-avatar" src="imgs/Avatar LUMA.jpg" alt="">
 
                 <div class="message-text"> Oie, eu sou a LUMA, em que posso ajudar?</div>
             </div>
