--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
 
 <!-- ICON PAGE -->
- <link rel="shortcut icon" href="imgs/logo.Chatbot.LUMA.png">
+ <link rel="shortcut icon" href="imgs/Avatar LUMA.jpg">
 
   <!-- ICONES -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
@@ -17,7 +17,7 @@
 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title> |LUMA| </title>
+    <title> |ALUMA| </title>
 </head>
 <body>
 
@@ -34,8 +34,7 @@
      <div class="chatbot-popup">
         <div class="chat-header">
             <div class="header-info">
-                <img src="imgs/octopus-removebg-preview.png" alt="">
-                <h2>LUMA</h2>
+                <h2> ALUMA</h2>
             </div>
         </div>
 
@@ -47,7 +46,7 @@
 
                 <img class="bot-avatar" src="imgs/Avatar LUMA.jpg" alt="">
 
-                <div class="message-text"> Oie, eu sou a LUMA, em que posso ajudar?</div>
+                <div class="message-text"> Oi, eu sou a ALUMA, em que posso ajudar?</div>
             </div>
         
          </div>
