--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
 
   <!-- INTRO -->
 
-  <div id="intro" class="intro-screen">
+<!--  <div id="intro" class="intro-screen">
     <div class="img-intro"><img src="imgs/intro.gif" alt=""></div>
     <p id="introText" class="typing-text">Inicializando sistema...</p>
-  </div>
+  </div> -->
   
   
     
